.provarCaches/00D6C0000000xA6UAI/objects/CCS_Batch_Instructor__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Class</label>
        <referenceTo>CCS_Batch_Class__c</referenceTo>
        <relationshipLabel>Batch Instructors</relationshipLabel>
        <relationshipName>Batch_Instructors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Id__c</fullName>
        <label>Instructor ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offering_Id_Batch_Instructor__c</fullName>
        <label>Offering Id Batch Instructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Batch Instructor</label>
    <nameField>
        <displayFormat>BI-{0000000000}</displayFormat>
        <label>Instructor Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Instructors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>